--- a/package.json
+++ b/package.json
@@ -8,9 +8,20 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
+    "axios": "^1.7.9",
+    "babel-preset-env": "^1.7.0",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
+    "core-js": "^3.39.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.28.1",
     "react-scripts": "^3.0.1",
     "reactstrap": "^9.2.3",
     "web-vitals": "^2.1.4"
@@ -19,8 +30,11 @@
     "start": "set NODE_OPTIONS=--openssl-legacy-provider&& set PORT=3030&& react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-server": "node backend/server.js",
+    "dev": "concurrently \"npm run start\" \"npm run start-server\""
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -38,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.1"
   }
 }
